refactor: 비즈니스 로직 리팩터링